<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    tools:context=".InfoPalabraFragment">

    <TextView
        android:id="@+id/txtPalabra"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="20dp"
        android:text="@string/palabras_titulo"
        android:textSize="48sp" />

    <ImageView
        android:id="@+id/imgPalabra"
        android:layout_width="202dp"
        android:layout_height="169dp"
        android:contentDescription="@string/string_imgPalabras"
        android:layout_gravity="center_horizontal"
        android:layout_margin="200dp"
        android:src="@drawable/baseline_arrow_back_24"
        app:srcCompat="@drawable/animales" />

    <TextView
        android:id="@+id/txtDescripcion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="500dp"
        android:text="@string/descripcion_palabra"
        android:textSize="24sp" />
</FrameLayout>