<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AlimentosFragment">

    <!-- Sección de boton atras y buscar -->
    <RelativeLayout
        android:id="@+id/barraMenu"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/alimentosTitulo">

        <ImageView
            android:id="@+id/btnVolver"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/baseline_arrow_back_24"
            android:padding="15dp"
            android:contentDescription="@string/string_btnVolver"
            android:layout_centerVertical="true">
        </ImageView>

        <ImageView
            android:id="@+id/search_pressed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/baseline_search_24"
            android:padding="15dp"
            android:contentDescription="@string/string_btnBuscar"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true">
        </ImageView>

    </RelativeLayout>

    <!-- Aqui va el texto categoria -->
    <TextView
        android:id="@+id/alimentosTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/alimentos_titulo"
        android:textSize="34sp"
        android:textAllCaps="true"
        android:layout_marginTop="10dp"
        android:padding="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/barraMenu">
    </TextView>

</androidx.constraintlayout.widget.ConstraintLayout>