<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CategoriasFragment"
    android:background="@color/white">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/constraintLayout"
        android:layout_marginTop="20dp">

        <!-- Sección de boton atras y buscar -->
        <RelativeLayout
            android:id="@+id/barraMenu"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/categoriasTitle">

            <ImageView
                android:id="@+id/btnVolver"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/baseline_arrow_back_24"
                android:padding="15dp"
                android:contentDescription="@string/string_btnVolver"
                android:layout_centerVertical="true">
            </ImageView>

        </RelativeLayout>

        <!-- Aqui va el texto categoria -->
        <TextView
            android:id="@+id/categoriasTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/categorias_titulo"
            android:textSize="34sp"
            android:textAllCaps="true"
            android:layout_marginTop="10dp"
            android:padding="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/barraMenu">
        </TextView>

        <!-- Fila 1 donde van nuestras 1ras dos categorias -->
        <LinearLayout
            android:id="@+id/row1"
            android:layout_width="0dp"
            android:layout_height="175dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:padding="10dp"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/categoriasTitle">

            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:id="@+id/abecedarioCard"
                android:layout_margin="5dp"
                android:layout_weight="1"
                app:cardElevation="20dp"
                app:cardCornerRadius="20dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/abecedarioTitulo"
                        android:text="@string/abecedario_titulo"
                        android:textSize="20sp"
                        android:textColor="@color/black"
                        android:layout_marginTop="10dp"
                        android:layout_centerHorizontal="true"
                        android:layout_below="@+id/abecedarioImagen">
                    </TextView>

                    <ImageView
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:id="@+id/abecedarioImagen"
                        android:contentDescription="@string/string_btnAbecedario"
                        android:src="@drawable/abecedario"
                        android:layout_marginTop="15dp"
                        android:layout_centerHorizontal="true">
                    </ImageView>

                </RelativeLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:id="@+id/alimentosCard"
                android:layout_margin="5dp"
                android:layout_weight="1"
                app:cardElevation="20dp"
                app:cardCornerRadius="20dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/alimentosTitulo"
                        android:text="@string/alimentos_titulo"
                        android:textSize="20sp"
                        android:textColor="@color/black"
                        android:layout_marginTop="10dp"
                        android:layout_centerHorizontal="true"
                        android:layout_below="@+id/alimentosImagen">
                    </TextView>

                    <ImageView
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:id="@+id/alimentosImagen"
                        android:contentDescription="@string/string_btnAlimentos"
                        android:src="@drawable/alimentos"
                        android:layout_marginTop="15dp"
                        android:layout_centerHorizontal="true">
                    </ImageView>

                </RelativeLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

        <!-- Fila 2 donde van nuestras 2das dos categorias -->
        <LinearLayout
            android:id="@+id/row2"
            android:layout_width="0dp"
            android:layout_height="175dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:padding="10dp"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/row1">

            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:id="@+id/animalesCard"
                android:layout_margin="5dp"
                android:layout_weight="1"
                app:cardElevation="20dp"
                app:cardCornerRadius="20dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/animalesTitulo"
                        android:text="@string/animales_titulo"
                        android:textSize="20sp"
                        android:textColor="@color/black"
                        android:layout_marginTop="10dp"
                        android:layout_centerHorizontal="true"
                        android:layout_below="@+id/animalesImagen">
                    </TextView>

                    <ImageView
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:id="@+id/animalesImagen"
                        android:contentDescription="@string/string_btnAnimales"
                        android:src="@drawable/animales"
                        android:layout_marginTop="15dp"
                        android:layout_centerHorizontal="true">
                    </ImageView>

                </RelativeLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:id="@+id/calendarioCard"
                android:layout_margin="5dp"
                android:layout_weight="1"
                app:cardElevation="20dp"
                app:cardCornerRadius="20dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/calendarioTitulo"
                        android:text="@string/calendario_titulo"
                        android:textSize="20sp"
                        android:textColor="@color/black"
                        android:layout_marginTop="10dp"
                        android:layout_centerHorizontal="true"
                        android:layout_below="@+id/calendarioImagen">
                    </TextView>

                    <ImageView
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:id="@+id/calendarioImagen"
                        android:contentDescription="@string/string_btnCalendario"
                        android:src="@drawable/calendario"
                        android:layout_marginTop="15dp"
                        android:layout_centerHorizontal="true">
                    </ImageView>

                </RelativeLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

        <!-- Fila 3 donde van nuestras 3ras dos categorias -->
        <LinearLayout
            android:id="@+id/row3"
            android:layout_width="0dp"
            android:layout_height="175dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:padding="10dp"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/row2">

            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:id="@+id/coloresCard"
                android:layout_margin="5dp"
                android:layout_weight="1"
                app:cardElevation="20dp"
                app:cardCornerRadius="20dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/coloresTitulo"
                        android:text="@string/colores_titulo"
                        android:textSize="20sp"
                        android:textColor="@color/black"
                        android:layout_marginTop="10dp"
                        android:layout_centerHorizontal="true"
                        android:layout_below="@+id/coloresImagen">
                    </TextView>

                    <ImageView
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:id="@+id/coloresImagen"
                        android:contentDescription="@string/string_btnCalendario"
                        android:src="@drawable/colores"
                        android:layout_marginTop="15dp"
                        android:layout_centerHorizontal="true">
                    </ImageView>

                </RelativeLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:id="@+id/numerosCard"
                android:layout_margin="5dp"
                android:layout_weight="1"
                app:cardElevation="20dp"
                app:cardCornerRadius="20dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/numerosTitulo"
                        android:text="@string/numeros_titulo"
                        android:textSize="20sp"
                        android:textColor="@color/black"
                        android:layout_marginTop="10dp"
                        android:layout_centerHorizontal="true"
                        android:layout_below="@+id/numerosImagen">
                    </TextView>

                    <ImageView
                        android:layout_width="70dp"
                        android:layout_height="70dp"
                        android:id="@+id/numerosImagen"
                        android:contentDescription="@string/string_btnNumeros"
                        android:src="@drawable/numeros"
                        android:layout_marginTop="15dp"
                        android:layout_centerHorizontal="true">
                    </ImageView>

                </RelativeLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>